# documentation

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  get_images.sh  manual.docbook  manual.html  manual.pot  manual_ca.html  manual_ca.po  manual_en.html  manual_es.html  manual_es.po  manual_fr.html  manual_fr.po  manual_it.html  manual_it.po  manual_nl.html  manual_nl.po  shotlist.txt  tutorial.docbook  tutorial.pot  tutorial_en.html  tutorial_fr.html  tutorial_fr.po  tutorial_it.html  tutorial_it.po
generate_images/: DiddleyPlaybackTrack.flac  Example.h2song  GM_kit_Diddley_example.h2song  Misc.h2song  alternative_hydrogen.conf  big_hydrogen.conf  default_hydrogen.conf  get_all_images.sh  get_images.sh  shotlist-alt.txt  shotlist-big.txt  shotlist-example.txt  shotlist-misc.txt  shotlist-tabbed.txt  shotlist.txt
outdated_translations/: README.md  manual_es.po  manual_fr.html  manual_fr.po  manual_it.po  manual_nl.html  manual_nl.po
res/: LICENSE  docbook.css  docbook.js  styling.xsd  styling.xsd~
res/xslt/common/: af.xml  am.xml  ar.xml  as.xml  ast.xml  az.xml  bg.xml  bn.xml  bn_in.xml  bs.xml  ca.xml  common.xml  cs.xml  cy.xml  da.xml  de.xml  el.xml  en.xml  eo.xml  es.xml  et.xml  eu.xml  fa.xml  fi.xml  fr.xml  ga.xml  gl.xml  gu.xml  he.xml  hi.xml  hr.xml  hu.xml  id.xml  is.xml  it.xml  ja.xml  ka.xml  kn.xml  ko.xml  ky.xml  (+37 more)
res/xslt/html/: chunker.xsl  docbook.xsl
