IF(MINGW)
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/doc DESTINATION "data" FILES_MATCHING PATTERN "*.html")
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/doc/img DESTINATION "data/doc")
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/doc/img_tutorial DESTINATION "data/doc")
ELSE()
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/doc DESTINATION ${H2_SYS_PATH}/data FILES_MATCHING PATTERN "*.html")
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/doc/img DESTINATION ${H2_SYS_PATH}/data/doc)
	INSTALL(DIRECTORY ${CMAKE_SOURCE_DIR}/data/doc/img_tutorial DESTINATION ${H2_SYS_PATH}/data/doc)
ENDIF()

